template based name generation, notifications
